# ForzaTelemetryV3

./: .gitignore  CLAUDE.md  Cargo.toml
assets/: engines.csv
assets/configs/: ale.json  ritze.json
docs/: forza-fh6-packet-format.md
src/: app.rs  config.rs  engines.rs  i18n.rs  icons.rs  input.rs  main.rs  network.rs  packet.rs  telemetry.rs
src/listeners/: backfire.rs  dsg.rs  mod.rs  perf_test.rs  power_capture.rs  sprint_timer.rs
src/ui/: acceleration.rs  backfire.rs  dashboard.rs  deceleration.rs  engine_swaps.rs  fun.rs  gearbox.rs  mod.rs  power_curve.rs  settings.rs
