[package]
name = "forza-telemetry"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forza-telemetry"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.33", features = ["default_fonts"] }
egui = "0.33"
egui_plot = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
dirs = "5"
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"

[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.6"
